<resources>
    <!--common-->
    <string name="login">登陆</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="telephone">电话</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="search_hint">请输入关键字</string>
    <string name="must">必填</string>
    <string name="screenname">昵称</string>
    <string name="save_picture">保存图片</string>
    <string name="not_null">不能为空</string>

    <string name="hupu">虎扑</string>
    <string name="message">信息</string>
    <string name="logout">登出</string>
    <string name="take_photo">拍摄</string>
    <string name="select_photo">相册图片</string>

    <string name="team">球队</string>
    <string name="data">数据</string>
    <string name="win_lose">胜负</string>
    <string name="difference">胜场差</string>
    <string name="rate">胜率</string>

    <string name="photo_album">相册</string>
    <string name="flash_light">闪光灯</string>
    <string name="qrcode">二维码</string>
    <string name="email">邮箱</string>
    <string name="question">问题</string>
    <string name="answer">答案</string>

    <string name="GETTING_PUSHING_URL">正在获取推流地址</string>
    <string name="STOP_PUSH">已断开直播</string>
    <string name="GET_PUSHING">正在获取推流地址</string>
    <string name="GET_LIVING">正在连接直播间</string>
    <string name="PERMISSION_GRANTED">授权成功</string>
    <string name="PERMISSION_DENIED">授权失败</string>

    <!--homepage-->
    <string name="app_name">EasySports</string>
    <string name="match">比赛</string>
    <string name="info">ֱ数据</string>
    <string name="forum">社区</string>
    <string name="news">新闻</string>
    <string name="mine">我的</string>
    <string name="reload">重新加载</string>
    <string name="network_error">网络好像开小差了</string>

    <!--news-->
    <string name="news_banner">今日头条</string>
    <string name="news_news">新闻资讯</string>
    <string name="news_videos">视频集锦</string>
    <string name="news_depth">最佳时刻</string>
    <string name="news_highlight">赛场花絮</string>

    <!--info-->
    <string name="info_data_daily">每日数据</string>
    <string name="info_data_season">季后赛</string>

    <!--example-->
    <string name="example_date">2017-12-05</string>
    <string name="example_date_detail">2017-06-12 09:40:21</string>
    <string name="example_title">洛瑞：我想要一枚总冠军戒指，这是驱动我的因素</string>
    <string name="example_title_video">视频-2017总决赛官方十佳球 阿杜致胜三分死神降临</string>
    <string name="example_screenname">rayhahah</string>
    <string name="example_index">东部排行</string>
    <string name="example_team_name">凯尔特人</string>
    <string name="example_win_lose">53-29</string>
    <string name="example_difference">2.0</string>
    <string name="example_rate">64.6%</string>
    <string name="example_value">11.0</string>
    <string name="example_player_rank">NO.1</string>
    <string name="example_player_name">拉塞尔·威斯布鲁克</string>
    <string name="example_rank_type">得分榜</string>
    <string name="example_input_nothing">不输入则不改变</string>

    <string name="example_projectid">A123124124</string>
    <string name="example_time">00:00:00</string>


    <!--mine-->
    <string name="mine_all_team">全部球队</string>
    <string name="mine_all_player">全部球员</string>
    <string name="mine_clean_ask">是否确认清楚缓存？</string>
    <string name="mine_clean_success">清除缓存成功</string>
    <string name="mine_feedback_title">欢迎您提出宝贵的意见！</string>
    <string name="mine_feedback_hint">大胆畅所欲言吧！O(∩_∩)O~~</string>
    <string name="mine_login_hint">账号/手机号</string>
    <string name="mine_login_myaccount">我的账号</string>
    <string name="mine_register_now">立即注册</string>
    <string name="mine_other_register_way">其他注册方式</string>
    <string name="detail_content">详细内容</string>
    <string name="decode_qrcode">扫一扫</string>
    <string name="mine_register_forget">忘记密码</string>


    <!--register-->
    <string name="register_username">登录账号</string>
    <string name="register_welcome">欢迎注册O(∩_∩)O~~</string>
    <string name="register_username_hint">请输入登陆账号</string>
    <string name="register_password_hint">请输入登陆密码</string>
    <string name="register_password">登录密码</string>
    <string name="register_screenname_hint">请输入用户昵称</string>
    <string name="register_tel_hint">请输入电话</string>
    <string name="register_hupu_username">虎扑账号</string>
    <string name="register_hupu_hint">虎扑社区使用</string>
    <string name="register_hupu_password">虎扑密码</string>
    <string name="illegal">不合法</string>
    <string name="registering">正在注册</string>
    <string name="register_regist_fail">注册失败，用户名已存在</string>
    <string name="register_regist_success">注册成功</string>
    <string name="register_question_hint">请输入重置密码问题</string>
    <string name="register_answer_hint">请输入重置密码答案</string>
    <string name="register_email_hint">请输入邮箱</string>

    <!--account-->
    <string name="account_manage">账号管理</string>
    <string name="account_setting">详细设置</string>
    <string name="info_data_normal">常规赛</string>
    <string name="bind_failed">绑定失败</string>
    <string name="bind_success">绑定成功</string>
    <string name="login_first">请先登陆</string>
    <string name="bind_hupu_first">请先绑定虎扑</string>

    <string-array name="ad">
        <item>/d/js/js/</item>
        <item>u.xcy8.com</item>
        <item>http://nba.tmiaoo.com/body.html</item>
        <item>http://nba.tmiaoo.com/gg.html</item>
        <item>http://img.ychtjd88.com</item>
        <item>http://hm.baidu.com</item>
        <item>http://img.jgchq.com</item>
        <item>http://img1.pxpbj.com</item>
        <item>http://www.jrszhibo.com/img/arrow_left.png</item>
    </string-array>

    <!-- QR_Code -->
    <string name="button_ok">OK</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the
        device.
    </string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="scan_text">放入框中即可进行二维码扫描</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="preferences_vibrate">preferences_vibrate</string>
    <string name="preferences_play_beep">preferences_play_beep</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_decode_1D_title">1D barcodes</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="preview_msg"> preview pages available,click Download for more.</string>
    <string name="REQUEST_PERMISSION">请求应用权限</string>
    <string name="version_name">版本号</string>
    <string name="version_code">版本码</string>
    <string name="example_version_name">1.0.0</string>
    <string name="example_version_code">1</string>
    <string name="version_desc">内容</string>
    <string name="example_version_desc">1、功能全面优化\n 2、UI全面优化\n 3、适配多种机型</string>
    <string name="example_version_time">2017年9月10日</string>
    <string name="time">时间</string>

</resources>
