<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/fbl_setting_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_corner4"
        android:padding="@dimen/dp_10"
        app:flexDirection="row"
        app:flexWrap="wrap"
        app:justifyContent="center"
        >

        <TextView

            android:id="@+id/tv_item_screenname"
            android:layout_width="1dp"
            android:layout_height="@dimen/dp_20"
            android:gravity="center"
            android:text="@string/screenname"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/sp_20"
            app:layout_flexGrow="1"/>

        <EditText
            android:id="@+id/et_screenname"
            android:layout_width="1dp"
            android:layout_height="@dimen/dp_45"
            android:gravity="center"
            android:hint="@string/example_input_nothing"
            android:textColor="?attr/colorTextDark"
            android:textColorHint="?attr/colorTextLight"
            android:textSize="@dimen/sp_20"
            app:layout_flexGrow="5"/>

        <View
            android:background="?attr/colorBg"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView

            android:id="@+id/tv_email"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/sp_20"
            app:layout_flexGrow="1"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="1dp"
            android:layout_height="@dimen/dp_45"
            android:gravity="center"
            android:hint="@string/example_input_nothing"
            android:textColor="?attr/colorTextDark"
            android:textColorHint="?attr/colorTextLight"
            android:textSize="@dimen/sp_20"
            app:layout_flexGrow="5"/>


        <View
            android:background="?attr/colorBg"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView

            android:id="@+id/tv_phone"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/telephone"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/sp_20"
            app:layout_flexGrow="1"/>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="1dp"
            android:layout_height="@dimen/dp_45"
            android:gravity="center"
            android:hint="@string/example_input_nothing"
            android:textColor="?attr/colorTextDark"
            android:textColorHint="?attr/colorTextLight"
            android:textSize="@dimen/sp_20"
            app:layout_flexGrow="5"/>


        <View
            android:background="?attr/colorBg"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView

            android:id="@+id/tv_question"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/question"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/sp_20"
            app:layout_flexGrow="1"/>

        <EditText
            android:id="@+id/et_question"
            android:layout_width="1dp"
            android:layout_height="@dimen/dp_45"
            android:gravity="center"
            android:hint="@string/example_input_nothing"
            android:textColor="?attr/colorTextDark"
            android:textColorHint="?attr/colorTextLight"
            android:textSize="@dimen/sp_20"
            app:layout_flexGrow="5"/>


        <View
            android:background="?attr/colorBg"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView

            android:id="@+id/tv_answer"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/answer"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/sp_20"
            app:layout_flexGrow="1"/>

        <EditText
            android:id="@+id/et_answer"
            android:layout_width="1dp"
            android:layout_height="@dimen/dp_45"
            android:gravity="center"
            android:hint="@string/example_input_nothing"
            android:textColor="?attr/colorTextDark"
            android:textColorHint="?attr/colorTextLight"
            android:textSize="@dimen/sp_20"
            app:layout_flexGrow="5"/>


        <View
            android:background="?attr/colorBg"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <Button
            android:id="@+id/btn_edit_cancel"
            android:layout_width="@dimen/dp_1"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/selector_color_click_corner"
            android:text="@string/cancel"
            android:textColor="?attr/colorBg"
            android:textSize="@dimen/sp_20"
            app:layout_flexGrow="1"/>

        <Button
            android:id="@+id/btn_edit_confirm"
            android:layout_width="@dimen/dp_1"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/selector_color_click_corner"
            android:text="@string/confirm"
            android:textColor="?attr/colorBg"
            android:textSize="@dimen/sp_20"
            app:layout_flexGrow="1"/>
    </com.google.android.flexbox.FlexboxLayout>


</layout>
